doc: update quickstart

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Application Settings
 DEBUG=True
 APP_ENV=development
+CPPCHECK_PROJECT_DIR="C:\CMS42\OpenSource\libav\\"
+AGENT_RECURSION_LIMIT=200
 
 # docker build args
 NEXT_PUBLIC_API_URL="http://localhost:8000/api"
